# NBH_PY

nbsgp/: nbsgp.sln
nbsgp/nbsgp/: nbsgp.py  nbsgp.pyproj  nbsgp_interface.py
nbsgp/testfiles/MyEngineProject/: CMakeLists.txt  MyEngineProject.py
nbsgp/testfiles/MyEngineProject/source/EngineCore/: EngineCore.py
nbsgp/testfiles/MyEngineProject/source/EngineCore/include/: EngineCore.h
nbsgp/testfiles/MyEngineProject/source/EngineCore/private/: EngineCore.cpp
nbsgp/testfiles/MyEngineProject/source/EngineCore/public/: T.h
nbsgp/testfiles/MyEngineProject/source/EngineExe/: EngineExe.py
nbsgp/testfiles/MyEngineProject/source/EngineExe/private/: main.cpp
nbsgp/testfiles/MyEngineProject/source/EngineRender/: EngineRender.py
nbsgp/testfiles/MyGameProject/: CMakeLists.txt  MyGameProject.py
nbsgp/testfiles/MyGameProject/source/GameExe/: GameExe.py
nbsgp/testfiles/MyGameProject/source/GameExe/private/: main.cpp
